[workspace]
resolver = "2"
members = [
    "crates/parseltongue",
    "crates/ultralinian",
    "crates/glossopetrae",
    "crates/panopticon",
    "crates/aegis",
    "mcp-server"
]

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
