[package]
name = "venom-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
parseltongue = { path = "../crates/parseltongue" }
ultralinian = { path = "../crates/ultralinian" }
glossopetrae = { path = "../crates/glossopetrae" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
